// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooCardComponent Snapshots Should be activable 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  heading="Title 1"
  is-activable="true"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      <yoo-form-checkbox
        class=""
        data-yoo-card=""
      />
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have a badge 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  heading="Title 1"
  top-left-badge="tl"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      <div
        class="top-left"
        data-yoo-card=""
      >
        <yoo-badge
          class=""
          data-yoo-card=""
          text="tl"
        />
      </div>
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have a heading 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  heading="Title 1"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have a menu 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  has-menu="true"
  heading="Title 1"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
        <yoo-context-menu
          data-yoo-card=""
        >
          <div
            data-yoo-card=""
            slot="trigger"
          >
            <span
              class="menu-icon"
              data-yoo-card=""
            >
              <i
                class="yo-more-v"
                data-yoo-card=""
              />
            </span>
          </div>
          <div
            class="context-container"
            data-yoo-card=""
            data-yoo-card-slot=""
          >
            
          </div>
        </yoo-context-menu>
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have an image source 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  img-src="http://www.twitrcovers.com/wp-content/uploads/2012/10/Star-Wars-l.jpg"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have avatar images 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  heading="Title 1"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have date 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  date="25/03/1994"
  heading="Title 1"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        <span
          class="date-card"
          data-yoo-card=""
        >
          25/03/1994
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots Should have tags 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  heading="Title 1"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        <span
          class="card-heading"
          data-yoo-card=""
        >
          Title 1
        </span>
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;

exports[`YooCardComponent Snapshots should have list type 1`] = `
<yoo-card
  class="hydrated"
  data-yoo-card-host=""
  title="Title 1"
  type="list"
>
  
  <div
    class="outer-container"
    data-yoo-card=""
  >
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card=""
    >
      
      <div
        class="image"
        data-yoo-card=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
      
    </div>
    <div
      class="status-container"
      data-yoo-card=""
    />
    <div
      class="content-container"
      data-yoo-card=""
    >
      <div
        attr-layout="row"
        class="heading-container"
        data-yoo-card=""
      >
        
      </div>
      
      <div
        attr-layout="row"
        class="slot-container"
        data-yoo-card=""
        data-yoo-card-slot=""
      >
        
      </div>
      <div
        attr-layout="row"
        class="avatar-container"
        data-yoo-card=""
      />
      
    </div>
  </div>
</yoo-card>
`;
